--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/base_configs/devel-s1-leaf1.cfg
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/base_configs/devel-s1-leaf1.cfg
@@ -16,7 +16,7 @@ transceiver qsfp default-mode 4x10G
 !
 service routing protocols model multi-agent
 !
-hostname s1-leaf1
+hostname devel-s1-leaf1
 ip name-server vrf MGMT 172.22.22.40
 !
 platform tfa
@@ -37,7 +37,6 @@ management api http-commands
       no shutdown
 !
 interface Ethernet1
-   description test
 !
 interface Ethernet2
 !
