--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs/devel-s1-leaf4.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs/devel-s1-leaf4.yml
@@ -1,4 +1,4 @@
-hostname: s1-leaf1
+hostname: devel-s1-leaf4
 is_deployed: true
 static_routes:
 - vrf: default
@@ -29,7 +29,7 @@ management_interfaces:
   description: oob_management
   shutdown: false
   vrf: default
-  ip_address: 192.168.0.12/24
+  ip_address: 192.168.0.15/24
   gateway: 192.168.0.1
   type: oob
 management_api_http:
@@ -42,47 +42,47 @@ vlans:
   name: MLAG_PEER
   trunk_groups:
   - MLAG
-- id: 10
-  name: Ten
+- id: 20
+  name: Twenty
   tenant: MY_FABRIC
 vlan_interfaces:
 - name: Vlan4094
   description: MLAG_PEER
   shutdown: false
-  ip_address: 10.1.253.4/31
+  ip_address: 10.1.253.9/31
   no_autostate: true
   mtu: 1500
 port_channel_interfaces:
 - name: Port-Channel1
-  description: MLAG_PEER_s1-leaf2_Po1
+  description: MLAG_PEER_s1-leaf3_Po1
   type: switched
   shutdown: false
   mode: trunk
   trunk_groups:
   - MLAG
 - name: Port-Channel2
-  description: SPINES_Po2
+  description: SPINES_Po4
   type: switched
   shutdown: false
   mode: trunk
-  vlans: '10'
+  vlans: '20'
   mlag: 2
 ethernet_interfaces:
 - name: Ethernet1
-  peer: s1-leaf2
+  peer: s1-leaf3
   peer_interface: Ethernet1
   peer_type: mlag_peer
-  description: MLAG_PEER_s1-leaf2_Ethernet1
+  description: MLAG_PEER_s1-leaf3_Ethernet1
   type: port-channel-member
   shutdown: false
   channel_group:
     id: 1
     mode: active
 - name: Ethernet6
-  peer: s1-leaf2
+  peer: s1-leaf3
   peer_interface: Ethernet6
   peer_type: mlag_peer
-  description: MLAG_PEER_s1-leaf2_Ethernet6
+  description: MLAG_PEER_s1-leaf3_Ethernet6
   type: port-channel-member
   shutdown: false
   channel_group:
@@ -90,9 +90,9 @@ ethernet_interfaces:
     mode: active
 - name: Ethernet2
   peer: s1-spine1
-  peer_interface: Ethernet2
+  peer_interface: Ethernet5
   peer_type: l3spine
-  description: S1-SPINE1_Ethernet2
+  description: S1-SPINE1_Ethernet5
   shutdown: false
   type: port-channel-member
   channel_group:
@@ -100,56 +100,20 @@ ethernet_interfaces:
     mode: active
 - name: Ethernet3
   peer: s1-spine2
-  peer_interface: Ethernet2
+  peer_interface: Ethernet5
   peer_type: l3spine
-  description: S1-SPINE2_Ethernet2
+  description: S1-SPINE2_Ethernet5
   shutdown: false
   type: port-channel-member
   channel_group:
     id: 2
     mode: active
 mlag_configuration:
-  domain_id: RACK1
+  domain_id: RACK2
   local_interface: Vlan4094
-  peer_address: 10.1.253.5
+  peer_address: 10.1.253.8
   peer_link: Port-Channel1
   reload_delay_mlag: '300'
   reload_delay_non_mlag: '330'
 ip_igmp_snooping:
   globally_enabled: true
-metadata:
-  cv_tags:
-    device_tags:
-    - name: Role
-      value: edge
-    # - name: Region
-    #   value: AVD_Land_East
-    # - name: Zone
-    #   value: DEFAULT-ZONE
-    # - name: Site
-    #   value: Site511
-    interface_tags:
-    - interface: Ethernet1
-      tags:
-      - name: Type
-        value: wan
-      # - name: Carrier
-      #   value: ATT
-      # - name: Circuit
-      #   value: '666'
-    - interface: Ethernet2
-      tags:
-      - name: Type
-        value: wan
-      # - name: Carrier
-      #   value: Colt
-      # - name: Circuit
-      #   value: '10555'
-    - interface: Ethernet3
-      tags:
-      - name: Type
-        value: wan
-      # - name: Carrier
-      #   value: Comcast-5G
-      # - name: Circuit
-      #   value: AF830
