--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs/strict_tags/devel-s1-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs/strict_tags/devel-s1-leaf1.yml
@@ -1,4 +1,4 @@
-hostname: s1-leaf1
+hostname: devel-s1-leaf1
 is_deployed: true
 static_routes:
 - vrf: default
@@ -121,7 +121,7 @@ metadata:
   cv_tags:
     device_tags:
     - name: Role
-      value: border
+      value: edge
     interface_tags:
     - interface: Ethernet1
       tags:
