--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1a-catalog.yml
@@ -400,6 +400,16 @@ anta.tests.interfaces:
       description: Vlan Interface & Line Protocol == 'up'
 - VerifyInterfacesStatus:
     interfaces:
+    - interface: Vlan4085
+      protocol_status: up
+      state: up
+    result_overwrite:
+      categories:
+      - Interface State
+      custom_field: Vlan4085 - Inband Management
+      description: Vlan Interface & Line Protocol == 'up'
+- VerifyInterfacesStatus:
+    interfaces:
     - interface: Loopback0
       protocol_status: up
       state: up
