--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -9140,8 +9140,8 @@ keys:
         type: str
         description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
-          For asdot notation in YAML inputs, the value *must* be put in quotes to
-          prevent it from being interpreted as a float number.'
+          For asdot notation in YAML inputs, the value must be put in quotes, to prevent
+          it from being interpreted as a float number.'
         convert_types:
         - int
       router_id:
@@ -9319,7 +9319,7 @@ keys:
               - int
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
-                For asdot notation in YAML inputs, the value *must* be put in quotes
+                For asdot notation in YAML inputs, the value must be put in quotes,
                 to prevent it from being interpreted as a float number.'
       peer_groups:
         type: list
@@ -9339,7 +9339,7 @@ keys:
               type: str
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
-                For asdot notation in YAML inputs, the value *must* be put in quotes
+                For asdot notation in YAML inputs, the value must be put in quotes,
                 to prevent it from being interpreted as a float number.'
               convert_types:
               - int
@@ -9347,7 +9347,7 @@ keys:
               type: str
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
-                For asdot notation in YAML inputs, the value *must* be put in quotes
+                For asdot notation in YAML inputs, the value must be put in quotes,
                 to prevent it from being interpreted as a float number.'
               convert_types:
               - int
@@ -9563,7 +9563,7 @@ keys:
               type: str
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
-                For asdot notation in YAML inputs, the value *must* be put in quotes
+                For asdot notation in YAML inputs, the value must be put in quotes,
                 to prevent it from being interpreted as a float number.'
               convert_types:
               - int
@@ -9571,7 +9571,7 @@ keys:
               type: str
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
-                For asdot notation in YAML inputs, the value *must* be put in quotes
+                For asdot notation in YAML inputs, the value must be put in quotes,
                 to prevent it from being interpreted as a float number.'
               convert_types:
               - int
@@ -9760,7 +9760,7 @@ keys:
               - int
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
-                For asdot notation in YAML inputs, the value *must* be put in quotes
+                For asdot notation in YAML inputs, the value must be put in quotes,
                 to prevent it from being interpreted as a float number.'
             peer:
               type: str
@@ -11136,8 +11136,8 @@ keys:
                     description: 'BGP AS <1-4294967295> or AS number in asdot notation
                       "<1-65535>.<0-65535>".
 
-                      For asdot notation in YAML inputs, the value *must* be put in
-                      quotes to prevent it from being interpreted as a float number.'
+                      For asdot notation in YAML inputs, the value must be put in
+                      quotes, to prevent it from being interpreted as a float number.'
                     convert_types:
                     - int
             neighbors:
@@ -11158,8 +11158,8 @@ keys:
                     description: 'BGP AS <1-4294967295> or AS number in asdot notation
                       "<1-65535>.<0-65535>".
 
-                      For asdot notation in YAML inputs, the value *must* be put in
-                      quotes to prevent it from being interpreted as a float number.'
+                      For asdot notation in YAML inputs, the value must be put in
+                      quotes, to prevent it from being interpreted as a float number.'
                     convert_types:
                     - int
                   password:
@@ -11194,8 +11194,8 @@ keys:
                     description: 'BGP AS <1-4294967295> or AS number in asdot notation
                       "<1-65535>.<0-65535>".
 
-                      For asdot notation in YAML inputs, the value *must* be put in
-                      quotes to prevent it from being interpreted as a float number.'
+                      For asdot notation in YAML inputs, the value must be put in
+                      quotes, to prevent it from being interpreted as a float number.'
                     convert_types:
                     - int
                   as_path:
@@ -11345,8 +11345,8 @@ keys:
                     description: 'BGP AS <1-4294967295> or AS number in asdot notation
                       "<1-65535>.<0-65535>".
 
-                      For asdot notation in YAML inputs, the value *must* be put in
-                      quotes to prevent it from being interpreted as a float number.'
+                      For asdot notation in YAML inputs, the value must be put in
+                      quotes, to prevent it from being interpreted as a float number.'
                     convert_types:
                     - int
                   peer_group:
