--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_network_services.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_network_services.schema.yml
@@ -864,7 +864,7 @@ $defs:
                         - int
                       description: |-
                         BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
-                        For asdot notation in YAML inputs, the value *must* be put in quotes to prevent it from being interpreted as a float number.
+                        For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
                     description:
                       type: str
                     password:
@@ -939,7 +939,7 @@ $defs:
                         - int
                       description: |-
                         Local BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
-                        For asdot notation in YAML inputs, the value *must* be put in quotes to prevent it from being interpreted as a float number.
+                        For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
                     weight:
                       type: int
                       convert_types:
