--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x-2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x-2.cfg
@@ -14,6 +14,7 @@ interface Management1
 !
 dot1x system-auth-control
 dot1x protocol lldp bypass
+dot1x protocol bpdu bypass
 dot1x dynamic-authorization
 dot1x
    radius av-pair service-type
