--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -1486,6 +1486,8 @@ keys:
         type: bool
       protocol_lldp_bypass:
         type: bool
+      protocol_bpdu_bypass:
+        type: bool
       dynamic_authorization:
         type: bool
       mac_based_authentication:
