Feat(eos_cli_config_gen): Add event-handler trigger on-maintenance

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -28,4 +28,16 @@ event-handler trigger-on-boot
    trigger on-boot
    action bash echo "on-boot"
 !
+event-handler trigger-on-maintenance
+   trigger on-maintenance enter interface Ethernet 4 all
+   action bash echo "on-maintenance"
+!
+event-handler trigger-on-maintenance1
+   trigger on-maintenance enter bgp 10.0.0.2 after linkdown
+   action bash echo "on-maintenance"
+!
+event-handler trigger-on-maintenance2
+   trigger on-maintenance enter unit unit1 before bgp
+   action bash echo "on-maintenance"
+!
 end
