--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -15,3 +15,35 @@ event_handlers:
     trigger: on-boot
     action_type: bash
     action: echo "on-boot"
+  - name: trigger-on-maintenance
+    trigger: on-maintenance
+    trigger_on_maintenance:
+      operation: enter
+      interface:
+        interface_type: Ethernet
+        interface_number: 4
+      stage: all
+    action_type: bash
+    action: echo "on-maintenance"
+  - name: trigger-on-maintenance1
+    trigger: on-maintenance
+    trigger_on_maintenance:
+      operation: enter
+      bgp:
+        neighbor_address_ipv4: 10.0.0.2
+      interface:
+        interface_type: Management
+        interface_number: 3
+      stage: after
+      after_before_stage: linkdown
+    action_type: bash
+    action: echo "on-maintenance"
+  - name: trigger-on-maintenance2
+    trigger: on-maintenance
+    trigger_on_maintenance:
+      operation: enter
+      unit: unit1
+      stage: before
+      after_before_stage: bgp
+    action_type: bash
+    action: echo "on-maintenance"
