Feat(eos_cli_config_gen): Add set_overload_bit and authentication to router_isis (#3578)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis-new.yml
@@ -62,6 +62,52 @@ router_isis:
         index: 211
       - prefix: 2001:cafe:155::/64
         index: 6211
+  set_overload_bit:
+    on_startup:
+      wait_for_bgp:
+        enabled: true
+        timeout: 10
+  authentication:
+    both:
+      key_ids:
+        - id: 2
+          algorithm: sha-512
+          key_type: 0
+          key: password
+          rfc_5310: false
+    level_1:
+      key_type: 0
+      key: password
+      mode: md5
+      rx_disabled: true
+      key_ids:
+        - id: 1
+          algorithm: sha-1
+          key_type: 0
+          key: password
+          rfc_5310: true
+        - id: 2
+          algorithm: sha-1
+          key_type: 0
+          key: password
+          rfc_5310: true
+    level_2:
+      key_type: 0
+      key: password
+      mode: sha
+      sha:
+        key_id: 2
+      key_ids:
+        - id: 1
+          algorithm: sha-1
+          key_type: 0
+          key: password
+          rfc_5310: true
+        - id: 2
+          algorithm: sha-1
+          key_type: 0
+          key: password
+          rfc_5310: true
 
 ### Ethernet Interfaces ###
 ethernet_interfaces:
