--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-isis.yml
@@ -16,6 +16,24 @@ router_isis:
     maximum_paths: 2
   segment_routing_mpls:
     enabled: true
+  authentication:
+    both:
+      key_type: 0
+      key: password
+      mode: sha
+      sha:
+        key_id: 4
+    level_1:
+      key_type: 0
+      key: password
+      mode: md5
+      rx_disabled: true
+    level_2:
+      key_type: 0
+      key: password
+      mode: sha
+      sha:
+        key_id: 2
 
 ### Ethernet Interfaces ###
 ethernet_interfaces:
