--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_isis.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_isis.schema.yml
@@ -44,6 +44,136 @@ keys:
                   - str
                 default: 10000
                 description: Delay in milliseconds.
+      set_overload_bit:
+        type: dict
+        keys:
+          enabled:
+            type: bool
+          on_startup:
+            type: dict
+            keys:
+              delay:
+                type: int
+                convert_types:
+                  - str
+                description: Number of seconds.
+              wait_for_bgp:
+                type: dict
+                keys:
+                  enabled:
+                    type: bool
+                  timeout:
+                    type: int
+                    convert_types:
+                      - str
+                    description: Number of seconds.
+      authentication:
+        type: dict
+        keys:
+          both:
+            type: dict
+            description: Authentication settings for level-1 and level-2. 'both' takes precedence over 'level_1' and 'level_2' settings.
+            keys:
+              key_type:
+                type: str
+                convert_types:
+                  - int
+                valid_values:
+                  - '0'
+                  - '7'
+                  - '8a'
+                description: Configure authentication key type. Default key_id is 0.
+              key:
+                type: str
+                description: Password string.
+              key_ids:
+                type: list
+                convert_types:
+                  - dict
+                primary_key: id
+                items:
+                  type: dict
+                  keys:
+                    id:
+                      type: int
+                      convert_types:
+                        - str
+                      required: true
+                      min: 1
+                      max: 65535
+                      description: Configure authentication key-id.
+                    algorithm:
+                      type: str
+                      required: true
+                      valid_values:
+                        - sha-1
+                        - sha-224
+                        - sha-256
+                        - sha-384
+                        - sha-512
+                    key_type:
+                      type: str
+                      convert_types:
+                        - int
+                      required: true
+                      valid_values:
+                        - '0'
+                        - '7'
+                        - '8a'
+                      description: Configure authentication key type.
+                    key:
+                      type: str
+                      required: true
+                      description: Password string.
+                    rfc_5310:
+                      description: SHA digest computation according to rfc5310.
+                      type: bool
+              mode:
+                type: str
+                description: Authentication mode.
+                valid_values:
+                  - md5
+                  - sha
+                  - text
+                  - shared_secret
+              sha:
+                type: dict
+                description: Required settings for authentication mode 'sha'.
+                keys:
+                  key_id:
+                    type: int
+                    convert_types:
+                      - str
+                    required: true
+                    min: 1
+                    max: 65535
+              shared_secret:
+                type: dict
+                description: Required settings for authentication mode 'shared_secret'.
+                keys:
+                  profile:
+                    type: str
+                    required: true
+                  algorithm:
+                    type: str
+                    required: true
+                    valid_values:
+                      - md5
+                      - sha-1
+                      - sha-224
+                      - sha-256
+                      - sha-384
+                      - sha-512
+              rx_disabled:
+                type: bool
+          level_1:
+            type: dict
+            description: Authentication settings for level-1. 'both' takes precedence over 'level_1' and 'level_2' settings.
+            $ref: "eos_cli_config_gen#/keys/router_isis/keys/authentication/keys/both"
+          level_2:
+            type: dict
+            description: Authentication settings for level-2. 'both' takes precedence over 'level_1' and 'level_2' settings.
+            $ref: "eos_cli_config_gen#/keys/router_isis/keys/authentication/keys/both"
       advertise:
         type: dict
         keys:
