--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
@@ -53,6 +53,7 @@ keys:
               - "enter"
               - "exit"
             bgp:
+              description: Trigger condition occurs on maintenance operation of specified BGP peer.
               type: dict
               keys:
                 neighbor_address_ipv4:
@@ -82,6 +83,7 @@ keys:
               type: str
               description: VRF name.
             interface:
+              description: Trigger condition occurs on maintenance operation of specified interface.
               type: dict
               keys:
                 interface_type:
@@ -103,7 +105,7 @@ keys:
                   required: true
             unit:
               type: str
-              description: Name of unit.
+              description: Name of unit. Trigger condition occurs on maintenance operation of specified unit
         regex:
           type: str
           description: |
