--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -11,7 +11,9 @@ keys:
     keys:
       as:
         type: str
-        description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+        description: |-
+          BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+          For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
         convert_types:
           - int
       router_id:
@@ -166,7 +168,9 @@ keys:
               type: str
               convert_types:
                 - int
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: |-
+                BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
       peer_groups:
         type: list
         primary_key: name
@@ -183,12 +187,16 @@ keys:
               description: Key only used for documentation or validation purposes
             remote_as:
               type: str
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: |-
+                BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
               convert_types:
                 - int
             local_as:
               type: str
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: |-
+                BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
               convert_types:
                 - int
             description:
@@ -387,12 +395,16 @@ keys:
               type: str
             remote_as:
               type: str
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: |-
+                BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
               convert_types:
                 - int
             local_as:
               type: str
-              description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+              description: |-
+                BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
               convert_types:
                 - int
             as_path:
@@ -572,6 +584,9 @@ keys:
               type: str
               convert_types:
                 - int
+              description: |-
+                BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
             peer:
               type: str
               description: Key only used for documentation or validation purposes
@@ -1922,7 +1937,9 @@ keys:
                       If both are defined, peer_filter takes precedence
                   remote_as:
                     type: str
-                    description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+                    description: |-
+                      BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                      For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
                     convert_types:
                       - int
             neighbors:
@@ -1940,7 +1957,9 @@ keys:
                     description: Peer-group name
                   remote_as:
                     type: str
-                    description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+                    description: |-
+                      BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                      For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
                     convert_types:
                       - int
                   password:
@@ -1972,7 +1991,9 @@ keys:
                       - str
                   local_as:
                     type: str
-                    description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+                    description: |-
+                      BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                      For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
                     convert_types:
                       - int
                   as_path:
@@ -2111,7 +2132,9 @@ keys:
                     description: Interface name
                   remote_as:
                     type: str
-                    description: BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+                    description: |-
+                      BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+                      For asdot notation in YAML inputs, the value must be put in quotes, to prevent it from being interpreted as a float number.
                     convert_types:
                       - int
                   peer_group:
