--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -109,8 +109,11 @@ keys:
   bgp_as:
     documentation_options:
       table: bgp-settings
-    description: AS number to use to configure overlay when "overlay_routing_protocol"
-      == ibgp.
+    description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>"
+      to use to configure overlay when "overlay_routing_protocol" == ibgp.
+
+      For asdot notation in YAML inputs, the value must be put in quotes, to prevent
+      it from being interpreted as a float number.'
     type: str
     convert_types:
     - int
@@ -5645,8 +5648,11 @@ $defs:
                       type: str
                       convert_types:
                       - int
-                      description: Remote BGP AS <1-4294967295> or AS number in asdot
-                        notation "<1-65535>.<0-65535>".
+                      description: 'BGP AS <1-4294967295> or AS number in asdot notation
+                        "<1-65535>.<0-65535>".
+
+                        For asdot notation in YAML inputs, the value must be put in
+                        quotes, to prevent it from being interpreted as a float number.'
                     description:
                       type: str
                     password:
@@ -5735,11 +5741,11 @@ $defs:
                       type: str
                       convert_types:
                       - int
-                      description: 'Local BGP ASN.
+                      description: 'Local BGP AS <1-4294967295> or AS number in asdot
+                        notation "<1-65535>.<0-65535>".
 
-                        eg. "65001.1200".
-
-                        '
+                        For asdot notation in YAML inputs, the value must be put in
+                        quotes, to prevent it from being interpreted as a float number.'
                     weight:
                       type: int
                       convert_types:
@@ -6647,7 +6653,12 @@ $defs:
           bgp_as:
             documentation_options:
               table: node-type-bgp-configuration
-            description: Required with eBGP.
+            description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+              For asdot notation in YAML inputs, the value must be put in quotes,
+              to prevent it from being interpreted as a float number.
+
+              Required with eBGP.'
             type: str
             convert_types:
             - int
@@ -6782,7 +6793,11 @@ $defs:
                       type: str
                       format: ipv4
                     bgp_as:
-                      description: BGP ASN of remote Route Server.
+                      description: 'Remote Route Server''s BGP AS <1-4294967295> or
+                        AS number in asdot notation "<1-65535>.<0-65535>".
+
+                        For asdot notation in YAML inputs, the value must be put in
+                        quotes, to prevent it from being interpreted as a float number.'
                       type: str
                       convert_types:
                       - int
@@ -6841,7 +6856,12 @@ $defs:
                 - str
                 default: 0
               local_as:
-                description: Apply local-as to peering with IPVPN remote peers.
+                description: 'Local BGP AS applied to peering with IPVPN remote peers.
+
+                  BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
+
+                  For asdot notation in YAML inputs, the value must be put in quotes,
+                  to prevent it from being interpreted as a float number.'
                 type: str
                 convert_types:
                 - int
@@ -6868,7 +6888,11 @@ $defs:
                       format: ipv4
                       required: true
                     bgp_as:
-                      description: BGP ASN of remote IPVPN Peer.
+                      description: 'Remote IPVPN Peer''s BGP AS <1-4294967295> or
+                        AS number in asdot notation "<1-65535>.<0-65535>".
+
+                        For asdot notation in YAML inputs, the value must be put in
+                        quotes, to prevent it from being interpreted as a float number.'
                       type: str
                       required: true
                       convert_types:
