--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh-custom-cipher.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh-custom-cipher.yml
@@ -12,7 +12,7 @@ management_ssh:
     server:
       - ecdsa-nistp256
       - ecdsa-nistp521
-    server_cert_key: sshkey.cert
+    server_cert: sshkey.cert
   access_groups:
     - name: ACL-SSH
     - name: ACL-SSH-VRF
