Test: Add static route towards LAN in VRF default

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -309,6 +309,11 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.1:511
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
+ip prefix-list PL-STATIC-VRF-DEFAULT
+   seq 10 permit 66.66.66.0/24
+!
+ip route 66.66.66.0/24 172.17.0.0
+!
 route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
    description Deny prefixes from WAN
    match as-path ASPATH-WAN
@@ -367,6 +372,7 @@ router bgp 65000
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
+   redistribute static
    !
    address-family evpn
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
