--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -243,6 +243,10 @@ tenants:
     vrfs:
       - name: default
         vrf_id: 1
+        static_routes:
+          - destination_address_prefix: 66.66.66.0/24
+            gateway: 172.17.0.0
+            nodes: [cv-pathfinder-edge]
       - name: PROD
         vrf_id: 42
         svis:
