--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -35,6 +35,7 @@ router_bgp:
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
+  - source_protocol: static
   neighbors:
   - ip_address: 172.17.0.0
     peer_group: IPv4-UNDERLAY-PEERS
@@ -216,6 +217,10 @@ prefix_lists:
   sequence_numbers:
   - sequence: 10
     action: permit 192.168.42.0/24 eq 32
+- name: PL-STATIC-VRF-DEFAULT
+  sequence_numbers:
+  - sequence: 10
+    action: permit 66.66.66.0/24
 route_maps:
 - name: RM-CONN-2-BGP
   sequence_numbers:
@@ -538,6 +543,10 @@ application_traffic_recognition:
     - name: CONTROL-PLANE-APP-DEST-PREFIXES
       prefix_values:
       - 192.168.144.1/32
+static_routes:
+- destination_address_prefix: 66.66.66.0/24
+  gateway: 172.17.0.0
+  vrf: default
 dps_interfaces:
 - name: Dps1
   description: DPS Interface
