Add route-map for redistribution static 2 bgp

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -312,6 +312,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 ip prefix-list PL-STATIC-VRF-DEFAULT
    seq 10 permit 66.66.66.0/24
 !
+ip route 172.16.0.0/16 172.16.5.4
 ip route 66.66.66.0/24 172.17.0.0
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
@@ -345,6 +346,10 @@ route-map RM-EVPN-SOO-IN permit 20
 route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.42.1:511 additive
 !
+route-map RM-STATIC-2-BGP permit 10
+   match ip address prefix-list PL-STATIC-VRF-DEFAULT
+   set extcommunity soo 192.168.42.1:511 additive
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
@@ -372,7 +377,7 @@ router bgp 65000
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
-   redistribute static
+   redistribute static route-map RM-STATIC-2-BGP
    !
    address-family evpn
       neighbor WAN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
