--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
@@ -110,7 +110,6 @@ router path-selection
    tcp mss ceiling ipv4 ingress
    !
    path-group Equinix id 103
-      ipsec profile CP-PROFILE
    !
    path-group INET id 101
       ipsec profile CP-PROFILE
@@ -120,14 +119,12 @@ router path-selection
       local interface Ethernet3
    !
    path-group LTE id 102
-      ipsec profile CP-PROFILE
    !
    path-group MPLS id 100
       !
       local interface Ethernet2
    !
    path-group Satellite id 104
-      ipsec profile CP-PROFILE
    !
    load-balance policy LB-CONTROL-PLANE-PROFILE
       path-group INET
@@ -272,6 +269,8 @@ application traffic recognition
 ip routing
 no ip routing vrf MGMT
 !
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.44.1:0
+!
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.44.0/24 eq 32
 !
@@ -279,9 +278,10 @@ ip route 0.0.0.0/0 10.7.7.6
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+   set extcommunity soo 192.168.44.1:0 additive
 !
-route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 30
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
+   match extcommunity ECL-EVPN-SOO
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -294,6 +294,11 @@ router bgp 65000
    bgp cluster-id 192.168.44.1
    bgp listen range 192.168.142.0/24 peer-group WAN-OVERLAY-PEERS remote-as 65000
    bgp listen range 192.168.143.0/24 peer-group WAN-OVERLAY-PEERS remote-as 65000
+   neighbor IPv4-UNDERLAY-PEERS peer group
+   neighbor IPv4-UNDERLAY-PEERS send-community
+   neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-IN in
+   neighbor IPv4-UNDERLAY-PEERS route-map RM-BGP-UNDERLAY-PEERS-OUT out
    neighbor WAN-OVERLAY-PEERS peer group
    neighbor WAN-OVERLAY-PEERS remote-as 65000
    neighbor WAN-OVERLAY-PEERS update-source Dps1
@@ -310,6 +315,7 @@ router bgp 65000
       next-hop resolution disabled
    !
    address-family ipv4
+      neighbor IPv4-UNDERLAY-PEERS activate
       no neighbor WAN-OVERLAY-PEERS activate
    !
    address-family ipv4 sr-te
