--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-common-path-group.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge-no-common-path-group.yml
@@ -2,7 +2,7 @@ hostname: cv-pathfinder-edge-no-common-path-group
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.42.6
+  router_id: 192.168.42.2
   bgp:
     default:
       ipv4_unicast: false
@@ -10,10 +10,13 @@ router_bgp:
     paths: 16
   updates:
     wait_install: true
-  redistribute_routes:
-  - source_protocol: connected
-    route_map: RM-CONN-2-BGP
   peer_groups:
+  - name: IPv4-UNDERLAY-PEERS
+    type: ipv4
+    maximum_routes: 12000
+    send_community: all
+    route_map_in: RM-BGP-UNDERLAY-PEERS-IN
+    route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
   - name: WAN-OVERLAY-PEERS
     type: wan
     update_source: Dps1
@@ -23,14 +26,78 @@ router_bgp:
     maximum_routes: 0
     remote_as: '65000'
     ttl_maximum_hops: 1
+  address_family_ipv4:
+    peer_groups:
+    - name: IPv4-UNDERLAY-PEERS
+      activate: true
+    - name: WAN-OVERLAY-PEERS
+      activate: false
+  redistribute_routes:
+  - source_protocol: connected
+    route_map: RM-CONN-2-BGP
+  neighbors:
+  - ip_address: 172.17.0.2
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65000'
+    peer: site-ha-disabled-leaf
+    description: site-ha-disabled-leaf_Ethernet2
+  vrfs:
+  - name: IT
+    router_id: 192.168.42.2
+    neighbors:
+    - ip_address: 172.17.0.2
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: site-ha-disabled-leaf_Ethernet2.100_vrf_IT
+    rd: 192.168.42.2:100
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 100:100
+      export:
+      - address_family: evpn
+        route_targets:
+        - 100:100
+    redistribute_routes:
+    - source_protocol: connected
+  - name: PROD
+    router_id: 192.168.42.2
+    neighbors:
+    - ip_address: 172.17.0.2
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: site-ha-disabled-leaf_Ethernet2.42_vrf_PROD
+    rd: 192.168.42.2:42
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - '42:42'
+      export:
+      - address_family: evpn
+        route_targets:
+        - '42:42'
+    redistribute_routes:
+    - source_protocol: connected
+  - name: default
+    rd: 192.168.42.2:1
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - '1:1'
+      export:
+      - address_family: evpn
+        route_targets:
+        - '1:1'
+        - route-map RM-EVPN-EXPORT-VRF-DEFAULT
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
       activate: true
-  address_family_ipv4:
-    peer_groups:
-    - name: WAN-OVERLAY-PEERS
-      activate: false
+      route_map_in: RM-EVPN-SOO-IN
+      route_map_out: RM-EVPN-SOO-OUT
   address_family_ipv4_sr_te:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -51,47 +118,6 @@ router_bgp:
         receive: true
         send:
           any: true
-  vrfs:
-  - name: default
-    rd: 192.168.42.6:1
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - '1:1'
-      export:
-      - address_family: evpn
-        route_targets:
-        - '1:1'
-        - route-map RM-EVPN-EXPORT-VRF-DEFAULT
-  - name: IT
-    router_id: 192.168.42.6
-    rd: 192.168.42.6:100
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - 100:100
-      export:
-      - address_family: evpn
-        route_targets:
-        - 100:100
-    redistribute_routes:
-    - source_protocol: connected
-  - name: PROD
-    router_id: 192.168.42.6
-    rd: 192.168.42.6:42
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - '42:42'
-      export:
-      - address_family: evpn
-        route_targets:
-        - '42:42'
-    redistribute_routes:
-    - source_protocol: connected
 service_routing_protocols_model: multi-agent
 ip_routing: true
 vlan_internal_order:
@@ -115,6 +141,39 @@ management_api_http:
   - name: MGMT
   enable_https: true
 ethernet_interfaces:
+- name: Ethernet52
+  peer: site-ha-disabled-leaf
+  peer_interface: Ethernet2
+  peer_type: l3leaf
+  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 172.17.0.3/31
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
+- name: Ethernet52.100
+  peer: site-ha-disabled-leaf
+  peer_interface: Ethernet2.100
+  peer_type: l3leaf
+  vrf: IT
+  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2.100_vrf_IT
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 100
+  mtu: 9214
+  ip_address: 172.17.0.3/31
+- name: Ethernet52.42
+  peer: site-ha-disabled-leaf
+  peer_interface: Ethernet2.42
+  peer_type: l3leaf
+  vrf: PROD
+  description: P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2.42_vrf_PROD
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 42
+  mtu: 9214
+  ip_address: 172.17.0.3/31
 - name: Ethernet1
   peer_type: l3_interface
   ip_address: dhcp
@@ -127,7 +186,13 @@ loopback_interfaces:
 - name: Loopback0
   description: Router_ID
   shutdown: false
-  ip_address: 192.168.42.6/32
+  ip_address: 192.168.42.2/32
+as_path:
+  access_lists:
+  - name: ASPATH-WAN
+    entries:
+    - type: permit
+      match: '65000'
 prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
@@ -140,12 +205,52 @@ route_maps:
     type: permit
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-- name: RM-EVPN-EXPORT-VRF-DEFAULT
+    set:
+    - extcommunity soo 192.168.42.2:511 additive
+- name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
+  - sequence: 20
+    type: deny
+    description: Deny prefixes from WAN
+    match:
+    - as-path ASPATH-WAN
   - sequence: 30
     type: permit
+    description: Mark prefixes originated from the LAN
+    set:
+    - extcommunity soo 192.168.42.2:511 additive
+- name: RM-BGP-UNDERLAY-PEERS-OUT
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    description: Advertise local routes towards LAN
     match:
-    - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+    - extcommunity ECL-EVPN-SOO
+  - sequence: 20
+    type: permit
+    description: Advertise routes received from WAN iBGP towards LAN
+    match:
+    - route-type internal
+- name: RM-EVPN-SOO-IN
+  sequence_numbers:
+  - sequence: 10
+    type: deny
+    match:
+    - extcommunity ECL-EVPN-SOO
+  - sequence: 20
+    type: permit
+- name: RM-EVPN-SOO-OUT
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    set:
+    - extcommunity soo 192.168.42.2:511 additive
+- name: RM-EVPN-EXPORT-VRF-DEFAULT
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    match:
+    - extcommunity ECL-EVPN-SOO
 flow_tracking:
   hardware:
     trackers:
@@ -160,12 +265,15 @@ flow_tracking:
         local_interface: Loopback0
         template_interval: 5000
     shutdown: false
+ip_extcommunity_lists:
+- name: ECL-EVPN-SOO
+  entries:
+  - type: permit
+    extcommunities: soo 192.168.42.2:511
 ip_security:
   ike_policies:
-  - name: DP-IKE-POLICY
-    local_id: 192.168.142.6
   - name: CP-IKE-POLICY
-    local_id: 192.168.142.6
+    local_id: 192.168.142.2
   sa_policies:
   - name: DP-SA-POLICY
     esp:
@@ -177,7 +285,6 @@ ip_security:
     pfs_dh_group: 14
   profiles:
   - name: DP-PROFILE
-    ike_policy: DP-IKE-POLICY
     sa_policy: DP-SA-POLICY
     connection: start
     shared_key: ABCDEF1234567890666
@@ -207,8 +314,8 @@ router_adaptive_virtual_topology:
     name: DEFAULT-ZONE
     id: 1
   site:
-    name: Site512
-    id: 512
+    name: Site511
+    id: 511
   profiles:
   - name: CONTROL-PLANE-PROFILE
     load_balance_policy: LB-CONTROL-PLANE-PROFILE
@@ -354,7 +461,7 @@ dps_interfaces:
 - name: Dps1
   description: DPS Interface
   mtu: 9214
-  ip_address: 192.168.142.6/32
+  ip_address: 192.168.142.2/32
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 vxlan_interface:
@@ -380,8 +487,12 @@ metadata:
     - name: Zone
       value: DEFAULT-ZONE
     - name: Site
-      value: Site512
+      value: Site511
     interface_tags:
+    - interface: Ethernet52
+      tags:
+      - name: Type
+        value: lan
     - interface: Ethernet1
       tags:
       - name: Type
@@ -389,15 +500,15 @@ metadata:
       - name: Carrier
         value: Inmrasat
       - name: Circuit
-        value: S512
+        value: S511
   cv_pathfinder:
     role: edge
-    vtep_ip: 192.168.142.6
+    vtep_ip: 192.168.142.2
     region: AVD_Land_East
     zone: DEFAULT-ZONE
-    site: Site512
+    site: Site511
     interfaces:
     - name: Ethernet1
       carrier: Inmrasat
-      circuit_id: S512
+      circuit_id: S511
       pathgroup: Satellite
