--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
@@ -10,6 +10,29 @@ router_bgp:
     paths: 16
   updates:
     wait_install: true
+  peer_groups:
+  - name: IPv4-UNDERLAY-PEERS
+    type: ipv4
+    maximum_routes: 12000
+    send_community: all
+    route_map_in: RM-BGP-UNDERLAY-PEERS-IN
+    route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
+  - name: WAN-OVERLAY-PEERS
+    type: wan
+    update_source: Dps1
+    bfd: true
+    password: htm4AZe9mIQOO1uiMuGgYQ==
+    send_community: all
+    maximum_routes: 0
+    remote_as: '65000'
+    ttl_maximum_hops: 1
+    route_reflector_client: true
+  address_family_ipv4:
+    peer_groups:
+    - name: IPv4-UNDERLAY-PEERS
+      activate: true
+    - name: WAN-OVERLAY-PEERS
+      activate: false
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
@@ -21,27 +44,12 @@ router_bgp:
   - prefix: 192.168.143.0/24
     peer_group: WAN-OVERLAY-PEERS
     remote_as: '65000'
-  peer_groups:
-  - name: WAN-OVERLAY-PEERS
-    type: wan
-    update_source: Dps1
-    bfd: true
-    password: htm4AZe9mIQOO1uiMuGgYQ==
-    send_community: all
-    maximum_routes: 0
-    remote_as: '65000'
-    ttl_maximum_hops: 1
-    route_reflector_client: true
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
       activate: true
     next_hop:
       resolution_disabled: true
-  address_family_ipv4:
-    peer_groups:
-    - name: WAN-OVERLAY-PEERS
-      activate: false
   address_family_ipv4_sr_te:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -136,12 +144,14 @@ route_maps:
     type: permit
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+    set:
+    - extcommunity soo 192.168.44.1:0 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
-  - sequence: 30
+  - sequence: 10
     type: permit
     match:
-    - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+    - extcommunity ECL-EVPN-SOO
 static_routes:
 - destination_address_prefix: 0.0.0.0/0
   gateway: 10.7.7.6
@@ -159,6 +169,11 @@ flow_tracking:
         local_interface: Loopback0
         template_interval: 5000
     shutdown: false
+ip_extcommunity_lists:
+- name: ECL-EVPN-SOO
+  entries:
+  - type: permit
+    extcommunities: soo 192.168.44.1:0
 ip_security:
   ike_policies:
   - name: CP-IKE-POLICY
@@ -281,13 +296,10 @@ router_path_selection:
     ipsec_profile: CP-PROFILE
   - name: LTE
     id: 102
-    ipsec_profile: CP-PROFILE
   - name: Equinix
     id: 103
-    ipsec_profile: CP-PROFILE
   - name: Satellite
     id: 104
-    ipsec_profile: CP-PROFILE
   peer_dynamic_source: stun
   load_balance_policies:
   - name: LB-CONTROL-PLANE-PROFILE
@@ -490,6 +502,10 @@ metadata:
           id: 422
           location:
             address: Somewhere
+        - name: Site423
+          id: 423
+          location:
+            address: Somewhere-warm
     - name: AVD_Land_East
       id: 43
       zones:
@@ -498,8 +514,6 @@ metadata:
         sites:
         - name: Site511
           id: 511
-        - name: Site512
-          id: 512
     vrfs:
     - name: default
       vni: 1
