--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
@@ -10,18 +10,13 @@ router_bgp:
     paths: 16
   updates:
     wait_install: true
-  redistribute_routes:
-  - source_protocol: connected
-    route_map: RM-CONN-2-BGP
-  bgp_cluster_id: 192.168.44.2
-  listen_ranges:
-  - prefix: 192.168.142.0/24
-    peer_group: WAN-OVERLAY-PEERS
-    remote_as: '65000'
-  - prefix: 192.168.143.0/24
-    peer_group: WAN-OVERLAY-PEERS
-    remote_as: '65000'
   peer_groups:
+  - name: IPv4-UNDERLAY-PEERS
+    type: ipv4
+    maximum_routes: 12000
+    send_community: all
+    route_map_in: RM-BGP-UNDERLAY-PEERS-IN
+    route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
   - name: WAN-OVERLAY-PEERS
     type: wan
     update_source: Dps1
@@ -40,6 +35,25 @@ router_bgp:
     maximum_routes: 0
     remote_as: '65000'
     ttl_maximum_hops: 42
+  address_family_ipv4:
+    peer_groups:
+    - name: IPv4-UNDERLAY-PEERS
+      activate: true
+    - name: WAN-OVERLAY-PEERS
+      activate: false
+    - name: WAN-RR-OVERLAY-PEERS
+      activate: false
+  redistribute_routes:
+  - source_protocol: connected
+    route_map: RM-CONN-2-BGP
+  bgp_cluster_id: 192.168.44.2
+  listen_ranges:
+  - prefix: 192.168.142.0/24
+    peer_group: WAN-OVERLAY-PEERS
+    remote_as: '65000'
+  - prefix: 192.168.143.0/24
+    peer_group: WAN-OVERLAY-PEERS
+    remote_as: '65000'
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -48,12 +62,6 @@ router_bgp:
       activate: true
     next_hop:
       resolution_disabled: true
-  address_family_ipv4:
-    peer_groups:
-    - name: WAN-OVERLAY-PEERS
-      activate: false
-    - name: WAN-RR-OVERLAY-PEERS
-      activate: false
   address_family_ipv4_sr_te:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -149,12 +157,14 @@ route_maps:
     type: permit
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+    set:
+    - extcommunity soo 192.168.44.2:0 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
-  - sequence: 30
+  - sequence: 10
     type: permit
     match:
-    - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
+    - extcommunity ECL-EVPN-SOO
 flow_tracking:
   hardware:
     trackers:
@@ -169,6 +179,11 @@ flow_tracking:
         local_interface: Loopback0
         template_interval: 5000
     shutdown: false
+ip_extcommunity_lists:
+- name: ECL-EVPN-SOO
+  entries:
+  - type: permit
+    extcommunities: soo 192.168.44.2:0
 ip_security:
   ike_policies:
   - name: CP-IKE-POLICY
@@ -297,13 +312,10 @@ router_path_selection:
     ipsec_profile: CP-PROFILE
   - name: LTE
     id: 102
-    ipsec_profile: CP-PROFILE
   - name: Equinix
     id: 103
-    ipsec_profile: CP-PROFILE
   - name: Satellite
     id: 104
-    ipsec_profile: CP-PROFILE
   peer_dynamic_source: stun
   load_balance_policies:
   - name: LB-CONTROL-PLANE-PROFILE
@@ -477,6 +489,10 @@ metadata:
           id: 422
           location:
             address: Somewhere
+        - name: Site423
+          id: 423
+          location:
+            address: Somewhere-warm
     - name: AVD_Land_East
       id: 43
       zones:
@@ -485,8 +501,6 @@ metadata:
         sites:
         - name: Site511
           id: 511
-        - name: Site512
-          id: 512
     vrfs:
     - name: default
       vni: 1
