--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/underlay_routing_protocol.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/underlay_routing_protocol.schema.yml
@@ -15,18 +15,20 @@ keys:
       - The following underlay routing protocols are supported:
         - EBGP (default for l3ls-evpn)
         - OSPF.
+        - OSPF-LDP*.
         - ISIS.
         - ISIS-SR*.
         - ISIS-LDP*.
         - ISIS-SR-LDP*.
-        - OSPF-LDP*.
+        - No underlay routing protocol (none)
       - The variables should be applied to all devices in the fabric.
       *Only supported with core_interfaces data model.
     valid_values:
       - "ebgp"
       - "ospf"
+      - "ospf-ldp"
       - "isis"
       - "isis-sr"
       - "isis-ldp"
       - "isis-sr-ldp"
-      - "ospf-ldp"
+      - "none"
